重构初始化程序

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,4 +1,4 @@
-jdbc_url=jdbc:mysql://localhost:3316/studentworks?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+jdbc_url=jdbc:mysql://localhost:3316/studentbehaviors?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 jdbc_username=root
 jdbc_password=root
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
