--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,5 +1,6 @@
-jdbc_url=jdbc:mysql://localhost:3316/studentbehaviors?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+jdbc_url=jdbc:mysql://localhost:3306/studentbehaviors?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 jdbc_username=root
 jdbc_password=root
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
 hibernate.show_sql=true
+current_systemId=AAA00000000000000000000000000000
