添加数据同步操作

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -4,3 +4,15 @@ jdbc_password=root
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
 hibernate.show_sql=true
 current_systemId=AAA00000000000000000000000000000
+
+
+#sync
+sync_Url=http://passport.furongedu.com/LoginService/LoginServiceStudent.asmx
+sync_UserName=furongedu
+sync_Password=furong
+#teacher_login
+teacher_login_url=http://webservice.furongedu.com/LoginService/Loginservice.asmx
+teacher_login_userName=Changcheng
+teacher_login_password=Changcheng2011
+#school
+sync_school_name=\u80B2\u82F1\u4E8C\u5C0F
