--- a/pom.xml
+++ b/pom.xml
@@ -157,6 +157,19 @@
   		<version>1.3.1</version>
   	</dependency>
   	
+  	<!--支持xpath -->
+  	<dependency>
+        <groupId>jaxen</groupId>
+        <artifactId>jaxen</artifactId>
+        <version>1.1.1</version>
+    </dependency>
+    
+    <dependency>
+        <groupId>dom4j</groupId>
+        <artifactId>dom4j</artifactId>
+        <version>1.6.1</version>
+    </dependency>
+  	
   	<!-- 项目依赖 -->    
   	<dependency>
   		<groupId>org.ipower</groupId>
