修正基础数据

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -15,4 +15,4 @@ teacher_login_url=http://webservice.furongedu.com/LoginService/Loginservice.asmx
 teacher_login_userName=Changcheng
 teacher_login_password=Changcheng2011
 #school
-sync_school_name=\u80B2\u82F1\u4E8C\u5C0F
+sync_school_name=\u80B2\u624D\u4E09\u5C0F
