添加用户认证

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -10,6 +10,10 @@ current_systemId=AAA00000000000000000000000000000
 sync_Url=http://passport.furongedu.com/LoginService/LoginServiceStudent.asmx
 sync_UserName=furongedu
 sync_Password=furong
+#login
+login_Url=http://webservice.furongedu.com/LoginService/Loginservice.asmx
+login_UserName=Changcheng
+login_Password=Changcheng2011
 #teacher_login
 teacher_login_url=http://webservice.furongedu.com/LoginService/Loginservice.asmx
 teacher_login_userName=Changcheng
