--- a/pom.xml
+++ b/pom.xml
@@ -169,6 +169,13 @@
         <artifactId>dom4j</artifactId>
         <version>1.6.1</version>
     </dependency>
+    
+    <!--xstream-->
+	<dependency>
+	    <groupId>com.thoughtworks.xstream</groupId>
+	    <artifactId>xstream</artifactId>
+	    <version>1.3.1</version>
+	</dependency>
   	
   	<!-- 项目依赖 -->    
   	<dependency>
