--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -21,4 +21,4 @@ teacher_login_password=Changcheng2011
 #school
 sync_school_name=\u80B2\u624D\u4E09\u5C0F
 #ignoreActionNames
-ignoreActions=login
+ignoreActions=login;report
